--- a/feed/codigocompleto.html
+++ b/feed/codigocompleto.html
@@ -1,4 +1,56 @@
-const posts = [
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Meu Feed</title>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="./css/main.css"/>
+    <style>
+        /* Remove a margem inicial. */
+body { 
+    margin: 0;
+    padding: 0;
+}
+header {
+    width: 100%;
+    display: table;
+    height: 60px;
+    background: linear-gradient(rgb(241, 150, 165),blue);
+}
+header span {
+    font-size: 24px;
+    font-family: cursive;
+    font-weight: bold ; 
+    color:rgb(240, 245, 248);
+    padding: 11px;
+    display: table;
+    margin: 0 auto;
+}
+#posts {
+    width: 600px;
+    height: 50px;
+    margin: 0 auto;
+    padding: 30px;
+    display: table;
+}
+.posts img {
+    max-width: 600px; 
+}
+img {
+    width: 400px;
+    height: auto;
+    margin: 30px;
+}
+
+    </style>
+</head>
+<body>
+    <!-- monta o topo da página. -->
+    <header>
+        <span>Meu Feed</span>
+    </header>
+    <div id="posts"></div>
+    <script type="text/javascript" src="./js/app.js">
+        const posts = [
     {
         photo: "https://media-cdn.tripadvisor.com/media/photo-s/15/ef/6a/1c/praia-de-sao-lourenco.jpg",
         description:"Dia de mar e sol!",
@@ -11,7 +63,7 @@ const posts = [
     }, 
     {
         photo: "https://static1.patasdacasa.com.br/articles/0/17/40/@/8351-alguns-acessorios-para-cachorro-sao-indi-articles_media_mobile-3.jpg",
-        description:"Hora do passeio (:",
+        description:"Hora do passeio.",
         timestamp: 79337764887679,
         autor: {
             name:"Luiz Lima",
@@ -43,31 +95,24 @@ const posts = [
 
 for(let i=0; i<posts.length; i++) {
     let post = document.createElement("div");
+    let username= document.createElement("span");
     let photo= document.createElement("img");
     let newPhoto = document.createElement("img");
-    newPhoto.className = "autor-photo";
-    let name = document.createElement("span");
-    let username= document.createElement("span");
     let timestamp = document.createElement("a");
     let description = document.createElement("a")
-   
 
     username.innerText = "@" + posts[i].autor.username;
     photo.src= posts[i].photo;
     timestamp.innerText = horaAtual(posts[i].timestamp);
     newPhoto.src= posts[i].autor.photo;
     description.innerText= posts[i].description;
-    name.innerText=posts[i].autor.name;
 
 
     post.appendChild(username);
     post.appendChild(newPhoto);
-    post.appendChild(name);
     post.appendChild(photo);
     post.appendChild(description);
     post.appendChild(timestamp);
-    
-    
 
     document.querySelector("#posts").appendChild(post);
 }
@@ -88,3 +133,6 @@ function horaAtual(timestamp){
     let minutes=addZero(currentDate.getMinutes());
     return day + "/" + month + "/" + year + " " + hour + ":" + minutes;
 }
+    </script>   
+</body>
+</html>
